--- a/project1/app/templates/app/index.html
+++ b/project1/app/templates/app/index.html
@@ -11,8 +11,8 @@
     <div class="col-md-4">
         <form action="home" method="post">
             {% csrf_token %}
-            {% for i in codes %}
-                <p>{{ i }}</p>
+            {% for i,i1 in codes %}
+                <p><a href="about.html?id={{ i }}">{{ i1 }}</a></p>
             {% endfor %}
 
         </form>
