--- a/project1/app/templates/app/about.html
+++ b/project1/app/templates/app/about.html
@@ -2,18 +2,26 @@
 
 {% block content %}
 
-
-<div class="row">
-    <div class="col-md-4">
-        <form action="about" method="post">
-            {% csrf_token %}
-            {% for code,source in codes %}
-                {% if guid == source %}
-                    <h2>{{ code }}</h2>
-                {% endif %}
-            {% endfor %}
-
-        </form>
+<div class="transbox" style="margin-top: 30px; margin-bottom: 30px;">
+    <div class="row">
+        <div class="col-md-8">
+            <form action="about" method="post">
+                {% csrf_token %}
+                {% for i,i1 in codes %}
+                    <p><a href="about.html?id={{ i1 }}" style="color: #2d6987">{{ i }}</a></p>
+                {% endfor %}
+                {% for code,source in codes %}
+                    {% if guid == source %}
+                        <h2>{{ codigo.keys }}</h2>
+                    {% endif %}
+                {% endfor %}
+            </form>
+        </div>
+    </div>
+            <br>
+            <br>
+            <br>
+            <br>
 </div>
 
 {% endblock %}
