--- a/project1/app/templates/app/layout.html
+++ b/project1/app/templates/app/layout.html
@@ -8,10 +8,29 @@
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/bootstrap.min.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/site.css' %}" />
     <script src="{% static 'app/scripts/modernizr-2.6.2.js' %}"></script>
+
+    <style>
+
+        div.transbox{
+          width: 30%;
+            margin-left: 70px;
+          background-color: #ffffff;
+          border: 1px solid black;
+          display: inline-block;
+          opacity: 0.6;
+          filter: alpha(opacity=60);
+        }
+
+        div.transbox p {
+          margin: 5%;
+          font-weight: bold;
+          color: #000000;
+        }
+    </style>
 </head>
 
-<body style="background-image: url('{% static "app/img/background.png" %}')">
-    <div class="navbar navbar-inverse navbar-fixed-top">
+<body>
+    <div style="color: black" class="navbar navbar-fixed-top" >
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -23,24 +42,28 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="{% url 'home' %}"></a></li>
+                    <li><a href="{% url 'about' %}?id=">About Aiport</a></li>
                 </ul>
             </div>
         </div>
     </div>
 
-    <div class="container body-content" >
-        <div>
-            <h1>Frederick Municipal Airport</h1>
-            <h5>What are you looking for?</h5>
+    <div>
+        <div class="container body-content">
+            <div>
+                <h1>Frederick Municipal Airport</h1>
+                <h5>What are you looking for?</h5>
+            </div>
         </div>
-        <br>
 
-{% block content %}{% endblock %}
-        <hr/>
-        <footer>
-            <p>&copy; {{ year }} - EDC</p>
-        </footer>
+    <div style="background-image: url('{% static 'app/img/airplane.jpg' %}')">
+
+    {% block content %}{% endblock %}
+
+            <footer class="container body-content">
+                 <hr/>
+                <p>&copy; {{ year }} - EDC</p>
+            </footer>
     </div>
 
     <script src="{% static 'app/scripts/jquery-1.10.2.js' %}"></script>
