--- a/project1/app/templates/app/layout.html
+++ b/project1/app/templates/app/layout.html
@@ -29,8 +29,8 @@
     </style>
 </head>
 
-<body>
-    <div style="color: black" class="navbar navbar-fixed-top" >
+<body style="background-color: #eeeeee">
+    <div class="navbar navbar-inverse navbar-fixed-top" >
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
