--- a/project1/app/templates/app/index.html
+++ b/project1/app/templates/app/index.html
@@ -2,21 +2,23 @@
 
 {% block content %}
 
+<div class="container body-content">
+            <div>
+                <h1>{{ title }}</h1>
+                <h5>{{ description }}</h5>
+            </div>
+</div>
+
 <div class="transbox" style="margin-top: 30px; margin-bottom: 30px;">
     <div class="row">
         <div class="col-md-8">
             <form action="home" method="post">
                 {% csrf_token %}
-                {% for i in plans %}
                     <p>{{ i }}</p>
-                {% endfor %}
             </form>
         </div>
     </div>
 </div>
-
-
-
 
 
 {% endblock %}
