--- a/project1/app/templates/app/layout.html
+++ b/project1/app/templates/app/layout.html
@@ -38,19 +38,17 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="{% url 'home' %}" class="navbar-brand"><img style="padding-bottom: 3px;" width="20px" height="20px" src=" {% static 'app/img/logo-ua.png' %}"/> Home</a>
+                <a href="{% url 'home' %}" class="navbar-brand"><img style="padding-bottom: 3px;"  width="20px" height="20px" src=" {% static 'app/img/logo-ua.png' %}"/> Home</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="{% url 'about' %}"></a></li>
+                    <li><a href="{% url 'createNew' %}">Criar Notícia</a></li>
                 </ul>
             </div>
         </div>
     </div>
 
     <div>
-
-
 
     {% block content %}{% endblock %}
 
