--- a/project1/app/templates/app/index.html
+++ b/project1/app/templates/app/index.html
@@ -11,17 +11,12 @@
 
 <div class="transbox" style="margin-top: 30px; margin-bottom: 30px;">
     <div class="row">
-        <div class="col-md-8">
+        <div class="col-md-12">
             <form action="home" method="post">
                 {% csrf_token %}
-                {% for newtitle, newvalue in news %}
-                    <h3>{{ newtitle }}</h3>
-                    {% autoescape off %}
-                        <div>{{ newvalue.0 }}</div>
-                        <br>
-                    {% endautoescape %}
+                {% for key, id in guid %}
+                    <h4><a href="about.html?{{ id }}">{{ key }}</a></h4>
                 {% endfor %}
-
             </form>
         </div>
     </div>
