--- a/project1/app/templates/app/layout.html
+++ b/project1/app/templates/app/layout.html
@@ -5,31 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ title }} Jornal Online Universidade de Aveiro</title>
     {% load staticfiles %}
-    <link rel="stylesheet" type="text/css" href="{% static 'app/content/bootstrap.min.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'app/content/bootstrap.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/site.css' %}" />
     <script src="{% static 'app/scripts/modernizr-2.6.2.js' %}"></script>
-
-    <style>
-
-        div.transbox{
-          width: 90%;
-            margin-left: 70px;
-          background-color: #ffffff;
-          border: 1px solid black;
-          display: inline-block;
-          opacity: 0.6;
-          filter: alpha(opacity=60);
-        }
-
-        div.transbox p {
-          margin: 5%;
-          font-weight: bold;
-          color: #000000;
-        }
-    </style>
 </head>
 
-<body style="background-color: #eeeeee">
+<body>
+
     <div class="navbar navbar-inverse navbar-fixed-top" >
         <div class="container">
             <div class="navbar-header">
@@ -54,7 +36,7 @@
 
             <footer class="container body-content">
                  <hr/>
-                <p>&copy; {{ year }} - EDC</p>
+                <p>&copy; 2017 EDC - Cristiana Carvalho, Daniela Simões</p>
             </footer>
     </div>
 
