--- a/project1/app/static/app/content/bootstrap.css
+++ b/project1/app/static/app/content/bootstrap.css
@@ -4917,7 +4917,7 @@ a.badge:focus {
   top: -1px;
 }
 
-a.list-group-item.active > .badge,
+a.list-group-item.active> .badge,
 .nav-pills > .active > a > .badge {
   color: #428bca;
   background-color: #ffffff;
@@ -5284,22 +5284,22 @@ a.list-group-item {
 }
 
 a.list-group-item .list-group-item-heading {
-  color: #333333;
+  color: #153651;
 }
 
 a.list-group-item:hover,
 a.list-group-item:focus {
   text-decoration: none;
-  background-color: #f5f5f5;
+  background-color: #99b3ff;
+  color: #ffffff !important;
 }
 
 .list-group-item.active,
 .list-group-item.active:hover,
 .list-group-item.active:focus {
   z-index: 2;
-  color: #ffffff;
-  background-color: #428bca;
-  border-color: #428bca;
+  color: #205179;
+  border-color: #D0D0D0;
 }
 
 .list-group-item.active .list-group-item-heading,
@@ -5311,7 +5311,7 @@ a.list-group-item:focus {
 .list-group-item.active .list-group-item-text,
 .list-group-item.active:hover .list-group-item-text,
 .list-group-item.active:focus .list-group-item-text {
-  color: #e1edf7;
+  color: #5e9fd4;
 }
 
 .list-group-item-heading {
