--- a/project1/app/templates/app/about.html
+++ b/project1/app/templates/app/about.html
@@ -2,23 +2,14 @@
 
 {% block content %}
 
-<div class="transbox" style="margin-top: 30px; margin-bottom: 30px;">
-    <div class="row">
-        <div class="col-md-8">
-            <form action="about" method="post">
-                {% csrf_token %}
-                {% for title, guid, value in news %}
-                    {% if id == guid %}
-                        {% autoescape off %}
-                            <div>{{ value.0 }}</div>
-                            <br>
-                            <br>
-                        {% endautoescape %}
-                    {% endif %}
-                {% endfor %}
-            </form>
-        </div>
+<div class="container">
+  <h2>{{ data.title }}</h2>
+  <div class="panel-group">
+    <div class="panel panel-default">
+        <div class="panel-heading">{{ data.pubDate }}</div>
+        <div class="panel-body">{{ data.description |safe }}</div>
     </div>
+  </div>
 </div>
 
 {% endblock %}
