--- a/project1/app/templates/app/layout.html
+++ b/project1/app/templates/app/layout.html
@@ -24,7 +24,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="{% url 'createNew' %}">Criar Notícia</a></li>
+                    <li><a href="{% url 'create_new' %}">Criar Notícia</a></li>
                 </ul>
             </div>
         </div>
