--- a/project1/app/templates/app/login.html
+++ b/project1/app/templates/app/login.html
@@ -2,13 +2,12 @@
 
 {% block content %}
 
-<h2>{{ title }}</h2>
-<div class="row">
-    <div class="col-md-8">
+<div class="container body-content">
+    <h2>{{ title }}</h2>
         <section id="loginForm">
             <form action="." method="post" class="form-horizontal">
                 {% csrf_token %}
-                <h4>Use a local account to log in.</h4>
+                <h4>Usa a tua conta para fazer login.</h4>
                 <hr />
                 <div class="form-group">
                     <label for="id_username" class="col-md-2 control-label">User name</label>
@@ -28,12 +27,13 @@
                         <input type="submit" value="Log in" class="btn btn-default" />
                     </div>
                 </div>
+                <p class="col-md-10">Ainda não estás registado? Resgista-te <a href="{% url 'register' %}">aqui.</a></p>
                 {% if form.errors %}
-                <p class="validation-summary-errors">Please enter a correct user name and password.</p>
+                <p class="validation-summary-errors">Por favor introduza o user ou password correcta.</p>
                 {% endif %}
             </form>
         </section>
-    </div>
+
     <div class="col-md-4">
         <section id="socialLoginForm"></section>
     </div>
