--- a/project1/app/templates/app/createNew.html
+++ b/project1/app/templates/app/createNew.html
@@ -2,24 +2,77 @@
 
 {% block content %}
 
-<div class="container body-content">
-    <div>
-        <h1>Criar Notícia</h1>
-        <h5>Publica aqui a tua notícia.</h5>
-    </div>
+    <div class="container body-content">
+        <div>
+            <h1>Criar Notícia</h1>
+            <h5>Publica aqui a tua notícia.</h5>
+        </div>
 
-    <form action="create_new" method="post">
-        {% csrf_token %}
-        <div class="form-group">
-            <label for="title">Título</label>
-            <input style="padding-right: 70%;" type="text" class="form-control" name="title">
+        <form action="create_new" method="post">
+            {% csrf_token %}
+            <div class="form-group">
+                <label for="title">Título</label>
+                <input style="padding-right: 70%;" type="text" class="form-control" name="title">
+            </div>
+            <div class="form-group">
+                <label for="corpo">Corpo:</label>
+                <textarea style="padding-right: 70%;" class="form-control" rows="15" id="corpo"
+                          name="description"></textarea>
+            </div>
+            <button type="submit" style="width: 70px" class="btn btn-default" value="Enviar Notícia">Enviar</button>
+            <button type="button" style="width: 70px" class="btn btn-info" data-toggle="modal" data-target="#myModal">
+                Upload
+            </button>
+
+        </form>
+
+
+        <!-- Modal -->
+        <div class="modal fade" id="myModal" role="dialog">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Escolha uma fotografia que ilustre a sua notícia</h4>
+                    </div>
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <div style="max-width: 650px; margin: auto;">
+                                <p>Select a PNG or JPEG image, having maximum size <span id="max-size"></span> KB.</p>
+
+                                <form id="upload-image-form" action="upload_image" method="post"
+                                      enctype="multipart/form-data">
+                                    {% csrf_token %}
+                                    <div id="image-preview-div" style="display: none">
+                                        <label for="exampleInputFile">Selected image:</label>
+                                        <br>
+                                        <img style="width: 100px" id="preview-img" src="noimage">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="file" name="file" id="file" required>
+                                    </div>
+                                    <button class="btn btn-primary" id="upload-button" type="submit" disabled>Upload</button>
+                                </form>
+
+                                <br>
+                                <div class="alert alert-info" id="loading" style="display: none;" role="alert">
+                                    <div class="progress">
+                                        <div class="progress-bar progress-bar-striped active" role="progressbar"
+                                             aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"
+                                             style="width: 100%">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div id="message"></div>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="form-group">
-              <label for="corpo">Corpo:</label>
-              <textarea style="padding-right: 70%;" class="form-control" rows="15" id="corpo" name="description"></textarea>
-        </div>
-        <button type="submit" class="btn btn-default" value="Enviar Notícia">Enviar</button>
-    </form>
-</div>
+    </div>
 
 {% endblock %}
