register.html bugfixed

--- a/project1/app/templates/app/register.html
+++ b/project1/app/templates/app/register.html
@@ -11,27 +11,27 @@
                 <h4>Introduz os teus dados para te registares.</h4>
                 <hr />
                 <div class="form-group">
-                    <label for="id_username" class="col-md-2 control-label">Primeiro Nome</label>
+                    <label for="id_firstname" class="col-md-2 control-label">Primeiro Nome</label>
                     <div class="col-md-10">
-                        <input type="text" class="form-control" name="firstname" placeholder="Primeiro Nome">
+                        <input type="text" class="form-control" name="firstname" placeholder="Primeiro Nome"/>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="id_username" class="col-md-2 control-label">Último Nome</label>
+                    <label for="id_lastname" class="col-md-2 control-label">Último Nome</label>
                     <div class="col-md-10">
-                        <input type="text" class="form-control" name="lastname" placeholder="Último Nome">
+                        <input type="text" class="form-control" name="lastname" placeholder="Último Nome"/>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="id_username" class="col-md-2 control-label">User name</label>
+                    <label for="id_email" class="col-md-2 control-label">E-mail</label>
                     <div class="col-md-10">
-                        <input type="text" class="form-control" name="username" placeholder="User name">
+                        <input type="text" class="form-control" name="username" placeholder="E-mail"/>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="id_password" class="col-md-2 control-label">Password</label>
                     <div class="col-md-10">
-                         <input type="text" class="form-control" name="password" placeholder="Password">
+                         <input type="password" class="form-control" name="password" placeholder="Password"/>
                     </div>
                 </div>
                 <div class="form-group">
