--- a/project1/app/templates/app/createNew.html
+++ b/project1/app/templates/app/createNew.html
@@ -19,8 +19,8 @@
                 <textarea style="width: 70%;" class="form-control" rows="15" id="description"
                           name="description"></textarea>
             </div>
-            <button type="button" style="width: 70px" class="btn btn-info" data-toggle="modal" data-target="#myModal">
-                Escolher imagem
+            <button type="button" style="width: 80px" class="btn btn-info" data-toggle="modal" data-target="#myModal">
+                Imagem
             </button>
 
             <button class="btn btn-primary" type="submit" id="upload-button">Criar notícia</button>
