agora em português

--- a/project1/app/templates/app/index.html
+++ b/project1/app/templates/app/index.html
@@ -6,8 +6,8 @@
         <div class = "page-header">
 
            <h1>
-              University of Aveiro
-              <small>latest news</small>
+              Universidade de Aveiro
+              <small>últimas notícias</small>
            </h1>
 
         </div>
