likes template + js done. missing ranking.

--- a/project1/app/templates/app/layout.html
+++ b/project1/app/templates/app/layout.html
@@ -52,6 +52,7 @@
     <script src="{% static 'app/scripts/respond.js' %}"></script>
     <script src="{% static 'app/scripts/upload.js' %}"></script>
     <script src="{% static 'app/scripts/deletenew.js' %}"></script>
+    <script src="{% static 'app/scripts/likes.js' %}"></script>
 {% block scripts %}{% endblock %}
 
 </body>
