--- a/project1/app/templates/app/about.html
+++ b/project1/app/templates/app/about.html
@@ -7,8 +7,13 @@
         <div class="panel-group">
             <div class="panel panel-default">
                 <div class="panel-heading">{{ data.pubDate }}</div>
-                <div class="panel-body">{{ data.description|safe }}</div>
+                <div class="panel-body">
+                    {{ data.description|safe }}
+                    <br>
+                    <p style="text-align: right;"><a href="{% url 'see_more' %}">Ver mais...</a></p>
+                </div>
             </div>
+
         </div>
         <br>
         <button id="like" style="background:transparent; border:none; color:transparent;" type="button"><i id="like_icon"
