--- a/project1/app/templates/app/about.html
+++ b/project1/app/templates/app/about.html
@@ -8,10 +8,10 @@
             <div class="panel panel-default">
                 <div class="panel-heading">{{ data.pubDate }}</div>
                 <div class="panel-body">
-                    <h5>{{ data.description|safe }}</h5>
+                    <p style="margin-right: 10%; text-align: justify; font-style: italic;">{{ data.description|safe }}</p>
                     <br>
                     <p style="text-align: right"><button type="button" class="btn btn-success" data-toggle="collapse" data-target="#textbody">Ver mais...</button></p>
-                    <div id="textbody" class="collapse">
+                    <div id="textbody" class="collapse" style="margin-right: 10%; text-align: justify;">
                         {% for i in textbody %}
                         <p>{{ i }}</p>
                         {% endfor %}
