--- a/project1/app/templates/app/about.html
+++ b/project1/app/templates/app/about.html
@@ -20,11 +20,46 @@
             </div>
 
         </div>
+
         <br>
-        <button id="like" style="background:transparent; border:none; color:transparent;" type="button"><i id="like_icon"
+        <p style="text-align: right"><button id="like" style="background:transparent; border:none; color:transparent;" type="button"><i id="like_icon"
                 class="glyphicon glyphicon-thumbs-up" style="font-size:25px;color:dimgrey"></i></button>
-        <button id="dislike" style="background:transparent; border:none; color:transparent;" type="button"><i id="dislike_icon"
-                class="glyphicon glyphicon-thumbs-down" style="font-size:25px;color:dimgrey"></i></button>
+        <button id="dislike" style="background:transparent; border:none; color:transparent; text-align: right" type="button" ><i id="dislike_icon"
+                class="glyphicon glyphicon-thumbs-down" style="font-size:25px;color:dimgrey"></i></button></p>
+
+        <br>
+        <div class="panel-group">
+            <div class="panel panel-default">
+                <div class="panel-heading">Deixe aqui o seu comentário.</div>
+                <div class="panel-body">
+                    <div class="col-sm-1">
+                        <div class="thumbnail">
+                            <img class="img-responsive user-photo" src="https://ssl.gstatic.com/accounts/ui/avatar_2x.png"/>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-5">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                            <strong>{{ user }}</strong> <span class="text-muted"></span>
+                            </div>
+                            <div class="panel-body">
+                            </div>
+                        </div>
+                    </div>
+
+                    <form action="comments" method="post" style="margin-top: 10%;">
+                        {% csrf_token %}
+                        <div class="form-group">
+                            <label for="corpo">Comentário:</label>
+                            <textarea style="width: 70%;" class="form-control" rows="3" name="comment"></textarea>
+                        </div>
+                        <button style="text-align: right" class="btn btn-primary" type="submit" id="subm">Submeter</button>
+                    </form>
+
+                </div>
+             </div>
+        </div>
     </div>
 
 {% endblock %}
