--- a/project1/app/templates/app/about.html
+++ b/project1/app/templates/app/about.html
@@ -29,36 +29,39 @@
 
         <br>
         <div class="panel-group">
-            <div class="panel panel-default">
-                <div class="panel-heading">Deixe aqui o seu comentário.</div>
-                <div class="panel-body">
-                    <div class="col-sm-1">
-                        <div class="thumbnail">
-                            <img class="img-responsive user-photo" src="https://ssl.gstatic.com/accounts/ui/avatar_2x.png"/>
-                        </div>
-                    </div>
-
-                    <div class="col-sm-5">
-                        <div class="panel panel-default">
-                            <div class="panel-heading">
-                            <strong>{{ user }}</strong> <span class="text-muted"></span>
-                            </div>
-                            <div class="panel-body">
-                            </div>
-                        </div>
-                    </div>
-
-                    <form action="comments" method="post" style="margin-top: 10%;">
-                        {% csrf_token %}
-                        <div class="form-group">
-                            <label for="corpo">Comentário:</label>
-                            <textarea style="width: 70%;" class="form-control" rows="3" name="comment"></textarea>
-                        </div>
-                        <button style="text-align: right" class="btn btn-primary" type="submit" id="subm">Submeter</button>
-                    </form>
-
+            {% if user_name != None %}
+                <div class="col-lg-2">
+                    <img style="width: 90px; border: 1px solid #428bca" class="img-responsive img-rounded" src="{{ photo }}"/>
                 </div>
-             </div>
+                <div class="col-lg-8">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                <strong>{{ user_name }}</strong> <span class="text-muted"></span>
+                                </div>
+                                <div class="panel-body">
+                                    <form action="comments" method="post" >
+                                        {% csrf_token %}
+                                        <div class="form-group">
+                                            <textarea class="form-control" placeholder="Deixe aqui o seu comentário." rows="3" name="comment"></textarea>
+                                        </div>
+                                        <button style="text-align: right" class="btn btn-primary" type="submit" id="subm">Comentar</button>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-12" style="margin-top: 10px;">
+                        </div>
+                    </div>
+                </div>
+            {% else %}
+                <div class="col-lg-12">
+                    <div class="alert alert-info" role="alert">
+                        Para inserir um comentário faça login.
+                    </div>
+                </div>
+            {% endif %}
         </div>
     </div>
 
