--- a/project1/app/templates/app/layout.html
+++ b/project1/app/templates/app/layout.html
@@ -53,6 +53,7 @@
     <script src="{% static 'app/scripts/upload.js' %}"></script>
     <script src="{% static 'app/scripts/deletenew.js' %}"></script>
     <script src="{% static 'app/scripts/likes.js' %}"></script>
+    <script src="{% static 'app/scripts/comments.js' %}"></script>
 {% block scripts %}{% endblock %}
 
 </body>
