--- a/project1/app/templates/app/createNew.html
+++ b/project1/app/templates/app/createNew.html
@@ -12,12 +12,15 @@
             {% csrf_token %}
             <div class="form-group">
                 <label for="title">Título</label>
-                <input style="width: 70%;" type="text" class="form-control" id="title" name="title">
+                <input style="width: 70%;" type="text" class="form-control" id="title" name="title"/>
             </div>
             <div class="form-group">
-                <label for="corpo">Corpo:</label>
-                <textarea style="width: 70%;" class="form-control" rows="15" id="description"
-                          name="description"></textarea>
+                <label for="link">Resumo:</label>
+                <textarea style="width: 70%;" class="form-control" rows="5" id="link" name="link"></textarea>
+            </div>
+            <div class="form-group">
+                <label for="description">Corpo:</label>
+                <textarea style="width: 70%;" class="form-control" rows="15" id="description" name="description"></textarea>
             </div>
             <button type="button" style="width: 80px" class="btn btn-info" data-toggle="modal" data-target="#myModal">
                 Imagem
