saving and retrieving comments.

--- a/project1/app/templates/app/createNew.html
+++ b/project1/app/templates/app/createNew.html
@@ -8,7 +8,7 @@
             <h5>Publica aqui a tua notícia.</h5>
         </div>
 
-        <form id="new" action="create_new" method="post">
+        <form id="new" method="post">
             {% csrf_token %}
             <div class="form-group">
                 <label for="title">Título</label>
