--- a/project1/app/templates/app/about.html
+++ b/project1/app/templates/app/about.html
@@ -18,7 +18,7 @@
                     </div>
                 </div>
             </div>
-
+            <p style="display: none" id="new_id">{{ new_id }}</p>
         </div>
 
         <br>
@@ -41,13 +41,13 @@
                                 <strong>{{ user_name }}</strong> <span class="text-muted"></span>
                                 </div>
                                 <div class="panel-body">
-                                    <form action="comments" method="post" >
+                                    <form method="post" >
                                         {% csrf_token %}
                                         <div class="form-group">
-                                            <textarea class="form-control" placeholder="Deixe aqui o seu comentário." rows="3" name="comment"></textarea>
+                                            <textarea class="form-control" placeholder="Deixe aqui o seu comentário." rows="3" name="comment" id="text_to_comment"></textarea>
                                         </div>
-                                        <button style="text-align: right" class="btn btn-primary" type="submit" id="subm">Comentar</button>
                                     </form>
+                                    <button style="text-align: right" class="btn btn-primary" id="comment">Comentar</button>
                                 </div>
                             </div>
                         </div>
