--- a/project1/app/templates/app/about.html
+++ b/project1/app/templates/app/about.html
@@ -63,6 +63,28 @@
                 </div>
             {% endif %}
         </div>
-    </div>
+        {% for comment in comments %}
+            <div class="panel-group">
+                <div class="col-lg-2">
+                    <img style="width: 90px; border: 1px solid #428bca" class="img-responsive img-rounded" src="http://graph.facebook.com/{{ comment.profile_uid }}/picture?type=large"/>
+                </div>
+                <div class="col-lg-8">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                <strong>{{ comment.profile_name }}</strong> <span class="text-muted"></span>
+                                </div>
+                                <div class="panel-body">
+                                    {{ comment.text }}
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-12" style="margin-top: 10px;">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
 
 {% endblock %}
