--- a/project1/app/templates/app/layout.html
+++ b/project1/app/templates/app/layout.html
@@ -26,6 +26,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="{% url 'create_new' %}">Criar Notícia</a></li>
                     <li><a href="{% url 'del_new' %}">Eliminar Notícia</a></li>
+                    <li><a href="{% url 'like_ranking' %}">Notícias Favoritas</a></li>
                 </ul>
                 {% include 'app/loginpartial.html' %}
             </div>
