--- a/project1/app/templates/app/loginpartial.html
+++ b/project1/app/templates/app/loginpartial.html
@@ -8,7 +8,7 @@
     {% csrf_token %}
     <ul class="nav navbar-nav navbar-right">
         <li><span class="navbar-brand">Olá {{ user.username }}!</span></li>
-        <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
+        <li><a href="javascript:document.getElementById('logoutForm').submit()">Log out</a></li>
     </ul>
 
 </form>
