--- a/project1/app/templates/app/loginpartial.html
+++ b/project1/app/templates/app/loginpartial.html
@@ -1,9 +1,15 @@
 {% if user.is_authenticated %}
-<ul class="nav navbar-nav">
-    <li><a href="{% url 'create_new' %}">Criar Notícia</a></li>
-    <li><a href="{% url 'del_new' %}">Eliminar Notícia</a></li>
-    <li><a href="{% url 'like_ranking' %}">Notícias Favoritas</a></li>
-</ul>
+    {% if user.is_superuser %}
+        <ul class="nav navbar-nav">
+            <li><a href="{% url 'create_new' %}">Criar Notícia</a></li>
+            <li><a href="{% url 'del_new' %}">Eliminar Notícia</a></li>
+            <li><a href="{% url 'like_ranking' %}">Notícias Favoritas</a></li>
+        </ul>
+    {% else %}
+        <ul class="nav navbar-nav">
+            <li><a href="{% url 'like_ranking' %}">Notícias Favoritas</a></li>
+        </ul>
+    {% endif %}
 <form id="logoutForm" action="/logout" method="post" class="navbar-right">
     {% csrf_token %}
     <ul class="nav navbar-nav navbar-right">
