--- a/project1/app/templates/app/about.html
+++ b/project1/app/templates/app/about.html
@@ -22,7 +22,7 @@
         </div>
 
         <br>
-        {% if user.is_authenticated  %}
+        {% if user.is_authenticated and not user.is_superuser %}
             <p style="text-align: right"><button id="like" style="background:transparent; border:none; color:transparent;" type="button"><i id="like_icon"
                     class="glyphicon glyphicon-thumbs-up" style="font-size:25px;color:dimgrey"></i></button>
             <button id="dislike" style="background:transparent; border:none; color:transparent; text-align: right" type="button" ><i id="dislike_icon"
