getting info from the API.

--- a/project2/app/templates/app/login.html
+++ b/project2/app/templates/app/login.html
@@ -9,7 +9,7 @@
                 {% csrf_token %}
                 <h2 style="margin-top: 10%"><a href="{% url 'social:begin' 'facebook' %}"><i class="fa fa-facebook-square"></i> Login com Facebook </a></h2>
 
-                <div style="margin-top: 5%"><h4>Login para Administrador</h4>
+                <div style="margin-top: 5%"><h4>Login</h4>
                     <hr/>
                     <form action="." method="post" class="form-horizontal" class="col-md-3">
                     <div class="form-group">
