Initial page inited.

--- a/project2/app/templates/app/index.html
+++ b/project2/app/templates/app/index.html
@@ -6,8 +6,11 @@
         <div class = "page-header">
 
            <h1>
-              Universidade de Aveiro
-              <small>últimas notícias</small>
+               <span style="color: #4cae4c">
+                   <i class="fa fa-spotify" aria-hidden="true"></i>
+                   Spotify
+               </span>
+               <small>the greatest hits</small>
            </h1>
 
         </div>
