--- a/project2/app/templates/app/layout.html
+++ b/project2/app/templates/app/layout.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ title }} Jornal Online Universidade de Aveiro</title>
+    <title>{{ title }} Spotify</title>
     {% load staticfiles %}
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/bootstrap.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/site.css' %}" />
@@ -36,7 +36,7 @@
 
             <footer class="container body-content">
                  <hr/>
-                <p>&copy; 2017 EDC - Cristiana Carvalho, Daniela Simões</p>
+                <p>&copy; 2017 EDC - Cristiana Carvalho, Daniela Simões, Domingos Nunes</p>
             </footer>
     </div>
 
