username in the navbar

--- a/project2/app/templates/app/layout.html
+++ b/project2/app/templates/app/layout.html
@@ -22,6 +22,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a href="{% url 'home' %}" class="navbar-brand">Home</a>
+                <a class="navbar-brand">{{ username }}</a>
             </div>
             <div class="navbar-collapse collapse">
 
